# llm-tui-monitor

./: .gitignore  CMakeLists.txt  README.md
include/: capture_layer.h  tui_dashboard.h
src/: capture_layer.cpp  main.cpp  tui_dashboard.cpp
